# rufs-crud-rust

./: .gitignore  Cargo.toml  README.md
sql/: 001.000.003-database_first_data.sql
src/: lib.rs
webapp/: index.html
webapp/css/: bootstrap-3.4.1-custom.css
webapp/es6/: CaseConvert.js  CrudCommom.js  CrudController.js  CrudItem.js  CrudItemJson.js  CrudJsonArray.js  CrudObjJson.js  CrudUiSkeleton.js  DataStore.js  OpenApiOperationObjectController.js  RufsServiceController.js  ServerConnection.js  ServerConnectionUI.js  UserController.js  Utils.js  app.js  crud.js
webapp/templates/: crud-item-json.html  crud-item.html  crud-json-array.html  crud-model_edit.html  crud-model_form_body.html  crud-model_form_body_aggregate.html  crud-model_form_body_filter.html  crud-model_form_body_sort.html  crud-model_form_body_view.html  crud-model_new.html  crud-model_search.html  crud-model_view.html  crud-obj-json.html  crud-table.html  crud.html  login.html
