[package]
name = "rufs-crud-rust"
version = "1.0.3"
authors = ["Alexsandro Stefenon <alexsandrostefenon@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.60"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde-wasm-bindgen = "0.4.5"
rufs-base-rust = { path = "../rufs-base-rust", default-features = false, features = ["wasm"] }
openapiv3 = "1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dependencies.getrandom]
version = "0.2.8"
features = [ 'js' ]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
